# aliyun-oss-rust-sdk

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust-publish.yml  rust.yml
examples/: simple.rs
src/: bucket.rs  client.rs  config.rs  conn.rs  lib.rs  prelude.rs  types.rs  util.rs
tests/: test_api.rs
