[package]
name = "aliyun_oss_rust_sdk"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serde_urlencoded = "0.7"

chrono = "0.4"

reqwest = "0.11"

base64 = "0.13"
md5 = "0.7"
crc = "2.0"
rust-crypto = "0.2"
rustc_version_runtime = "0.2.0"

quick-xml = { version = "0.22", features = [ "serialize" ] }

[dev-dependencies]
pretty_env_logger = "0.4"

[dev-dependencies.tokio]
version = "1.0.3"
default-features = false
features = [ "rt", "rt-multi-thread", "net", "sync", "io-util", "macros", "time", "signal" ]
