[package]
name = "yunoss"
version = "0.0.1"
edition = "2021"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
description = "An unoffical Aliyun OSS SDK"
keywords = ["aliyun", "oss"]
categories = ["network-programming"]
readme = "README.md"
homepage = "https://github.com/jjeffcaii/aliyun-oss-rust-sdk"
repository = "https://github.com/jjeffcaii/aliyun-oss-rust-sdk"
license = "Apache-2.0"

[dependencies]
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.21" }
base64 = "0.22"
md5 = "0.7"
crc = "3.0"
rustc_version_runtime = "0.3"
quick-xml = { version = "0.31", features = ["serialize"] }
sha-1 = "0.10"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "net", "sync", "io-util", "macros", "time", "signal"] }

[[example]]
name = "simple"
path = "examples/simple.rs"
